# cpp_iz_2

./: CMakeLists.txt  CPPLINT.cfg  README.md  main.c
.github/workflows/: cmake.yml
async_lib/include/: calculate_sum_corners.h
async_lib/src/: calculate_sum_corners.c  matrix.c
sync_lib/include/: calculate_sum_corners.h  matrix.h
sync_lib/src/: calculate_sum_corners.c  matrix.c
time_test/: main.cpp
unit_tests/: main.cpp
